[tool.poetry]
name = "statbot"
version = "0.1.1"
description = ""
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
aurflux = "*"
asyncpg = "^0.20.1"
pytz = "^2020.1"
tqdm = "^4.46.1"
aioschedule = "^0.5.2"
"discord.py" = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
